--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -9,9 +10,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@400;600;700&display=swap" rel="stylesheet">
 </head>
+
 <body>
     <header>
-        <nav>
+        <nav class="upper-nav">
             <div class="header__logo">
                 <h1>neutron<span class="word-purple">Mail</span></h1>
             </div>
@@ -44,7 +46,7 @@
                     <button class="play-market"></button>
                 </div>
             </div>
-        <div>
+            <div>
     </header>
     <main>
         <div class="adv__cards">
@@ -53,7 +55,7 @@
                 <h4>Swiss Privacy</h4>
                 <h5>Data Security and Neutrality</h5>
                 <p>
-                    NeutronMail is incorporated in Somewhere and all our servers are located in Switzerland. 
+                    NeutronMail is incorporated in Somewhere and all our servers are located in Switzerland.
                     This means all user data is protected by strict Swiss privacy laws.
                 </p>
             </div>
@@ -62,8 +64,8 @@
                 <h4>Double Encryption</h4>
                 <h5>Automatic Email Security</h5>
                 <p>
-                    All emails are secured automatically with end-to-end encryption. 
-                    This means even we cannot decrypt and read your emails. 
+                    All emails are secured automatically with end-to-end encryption.
+                    This means even we cannot decrypt and read your emails.
                     As a result, your encrypted emails cannot
                     be shared with third parties.
                 </p>
@@ -73,12 +75,90 @@
                 <h4>Anonymous Email</h4>
                 <h5>Protect Your Privacy</h5>
                 <p>
-                    No personal information is required to create your secure email account. 
-                    By default, we do not keep any IP logs which can be linked to your anonymous email account. 
+                    No personal information is required to create your secure email account.
+                    By default, we do not keep any IP logs which can be linked to your anonymous email account.
                     Your privacy comes first.
                 </p>
             </div>
         </div>
     </main>
+
+
+    <div class="abovelabel">
+        <!--  <p>Those, who help us secure your privacy</p>-->
+    </div>
+    <footer>
+        <div class="info-wrap">
+            <ul class="contacts">
+                <div class="first">
+                    <li class="first">General:
+                        <a href="#">contact@neutronmail.ch</a>
+                    </li>
+                    <li>Media:
+                        <a href="#">media@neutronmail.ch</a>
+                    </li>
+                    <li>Security:
+                        <a href="#">security@neutronmail.ch</a>
+                    </li>
+                </div>
+                <li class="last-two">
+                    For support inquiries, please visit<br>
+                    <a href="#">neutronmail.com/support</a>
+                </li>
+            </ul>
+            <div class="comp-wrap">
+                <nav class="company-info comp-info-with-border">
+                    <div class="comp"> Company<br></div>
+                    <ul>
+                        <li> <a href="#">Blog</a></li>
+                        <li> <a href="#">Team</a></li>
+                        <li> <a href="#">Careers</a></li>
+                        <li> <a href="#">Support</a></li>
+                        <li> <a href="#">Donate</a></li>
+                    </ul>
+                </nav>  
+                <nav class="company-info">
+                    <ul>
+                        <div class="comp">Legal<br></div>
+                        <li> <a href="#">Imprint</a></li>
+                        <li> <a href="#">Privacy POlicy</a></li>
+                        <li> <a href="#">Terms & Conditions</a></li>
+                        <li> <a href="#">Transparency Report</a></li>
+                        <li> <a href="#">report Abuse</a></li>
+                    </ul>
+                </nav>
+                <nav class="company-info">
+                    <ul>
+                        <div class="comp">NeutronMail <br></div>
+                        <li> <a href="#">Pricing</a></li>
+                        <li> <a href="#">Security</a></li>
+                        <li> <a href="#">Shop</a></li>
+                        <li> <a href="#">Press/Media Kit</a></li>
+                        <li> <a href="#">Onion Site</a></li>
+                    </ul>
+                </nav>
+
+            </div>
+        </div>
+        <div class="helperlabel">
+        </div>
+        <div class="social_and_rights">
+            <nav class="social-nav">
+                <ul class="footer-social">
+                    <li><a href="#">Facebook</a></li>
+                    <li><a href="#">Twitter</a></li>
+                    <li><a href="#">Google+</a></li>
+                    <li><a href="#">Feedback Forum</a></li>
+                    <li><a href="#">Reddit</a></li>
+                </ul>
+                <nav />
+                <div class="footer-rights-wrapper">
+                    <div class="footer-rights">
+                        <p class="footer-title">© 2017 Neutron Technologies AG. All Rights Reserved.</p>
+                    </div>
+                </div>
+        </div>
+    </footer>
 </body>
+
 </html>
