--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@400;600;700&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/34a6a820c3.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -26,8 +27,8 @@
                 <a href="#donate">Donate</a>
             </div>
             <div class="authnav">
-                <a href="#login">Log in</a>
-                <a href="#signup">Sign up</a>
+                <a href="#login"><span class="fa-solid fa-right-to-bracket"></span>Log in</a>
+                <a href="#signup" class="sign-up">Sign up</a>
             </div>
         </nav>
         <div class="languagenav">
@@ -36,6 +37,11 @@
             <label>Italian</label><span class="slash"> / </span>
             <label>Polish</label>
         </div>
+        <ul class="list-links">
+            <li><a href="#google+"><i class="fa-brands fa-square-google-plus"></i></a></li>
+            <li><a href="#facebook"><i class="fa-brands fa-square-facebook"></i></a></li>
+            <li><a href="#twitter"><i class="fa-brands fa-square-twitter"></i></a></li>
+         </ul>
         <div class="main-header">
             <div class="midtitle1">Secure Email Communication</div>
             <div class="midtitle2">Based in <span class="word-red">Somewhere</span></div>
@@ -46,11 +52,12 @@
                     <button class="play-market"></button>
                 </div>
             </div>
-            <div>
+            <div class="image-bg">3</div>
+        </div>
     </header>
     <main>
         <div class="adv__cards">
-            <div class="adv__card">
+            <div id="first" class="adv__card comp-info-with-border">
                 <img src="images/security.png" alt="security">
                 <h4>Swiss Privacy</h4>
                 <h5>Data Security and Neutrality</h5>
@@ -59,7 +66,7 @@
                     This means all user data is protected by strict Swiss privacy laws.
                 </p>
             </div>
-            <div class="adv__card">
+            <div id="second" class="adv__card comp-info-with-border">
                 <img src="images/lock.png" alt="lock">
                 <h4>Double Encryption</h4>
                 <h5>Automatic Email Security</h5>
@@ -70,7 +77,7 @@
                     be shared with third parties.
                 </p>
             </div>
-            <div class="adv__card">
+            <div id="third" class="adv__card comp-info-with-border">
                 <img src="images/key.png" alt="key">
                 <h4>Anonymous Email</h4>
                 <h5>Protect Your Privacy</h5>
