Physical security, slider, any device

--- a/index.html
+++ b/index.html
@@ -56,38 +56,106 @@
         </div>
     </header>
     <main>
-        <div class="adv__cards">
-            <div id="first" class="adv__card comp-info-with-border">
-                <img src="images/security.png" alt="security">
-                <h4>Swiss Privacy</h4>
-                <h5>Data Security and Neutrality</h5>
-                <p>
-                    NeutronMail is incorporated in Somewhere and all our servers are located in Switzerland.
-                    This means all user data is protected by strict Swiss privacy laws.
-                </p>
+        <section>
+            <div class="adv__cards">
+                <div id="first" class="adv__card comp-info-with-border">
+                    <img src="images/security.png" alt="security">
+                    <h4>Swiss Privacy</h4>
+                    <h5>Data Security and Neutrality</h5>
+                    <p>
+                        NeutronMail is incorporated in Somewhere and all our servers are located in Switzerland.
+                        This means all user data is protected by strict Swiss privacy laws.
+                    </p>
+                </div>
+                <div id="second" class="adv__card comp-info-with-border">
+                    <img src="images/lock.png" alt="lock">
+                    <h4>Double Encryption</h4>
+                    <h5>Automatic Email Security</h5>
+                    <p>
+                        All emails are secured automatically with end-to-end encryption.
+                        This means even we cannot decrypt and read your emails.
+                        As a result, your encrypted emails cannot
+                        be shared with third parties.
+                    </p>
+                </div>
+                <div id="third" class="adv__card comp-info-with-border">
+                    <img src="images/key.png" alt="key">
+                    <h4>Anonymous Email</h4>
+                    <h5>Protect Your Privacy</h5>
+                    <p>
+                        No personal information is required to create your secure email account.
+                        By default, we do not keep any IP logs which can be linked to your anonymous email account.
+                        Your privacy comes first.
+                    </p>
+                </div>
             </div>
-            <div id="second" class="adv__card comp-info-with-border">
-                <img src="images/lock.png" alt="lock">
-                <h4>Double Encryption</h4>
-                <h5>Automatic Email Security</h5>
-                <p>
-                    All emails are secured automatically with end-to-end encryption.
-                    This means even we cannot decrypt and read your emails.
-                    As a result, your encrypted emails cannot
-                    be shared with third parties.
-                </p>
+            <div class="center-text">
+                <h2>Physical Security</h2>
+                <div class="center-text-contaner"><p>NeutronMail's infrastructure resides in Europe's <span class="word-red">most secure</span> 
+                     datacenter, underneath 1000 meters of solid rock.</p></div>
+                <div class="button-align"><button class="privacy-button">Learn more about our security features</button></div>
             </div>
-            <div id="third" class="adv__card comp-info-with-border">
-                <img src="images/key.png" alt="key">
-                <h4>Anonymous Email</h4>
-                <h5>Protect Your Privacy</h5>
-                <p>
-                    No personal information is required to create your secure email account.
-                    By default, we do not keep any IP logs which can be linked to your anonymous email account.
-                    Your privacy comes first.
-                </p>
+        </section>
+        <section>
+            <div><img id="jornals-img" src="images/journals.png" alt="Journals that have written about us"></div>
+            <div class="slider">
+                <input type="radio" name="r" id="slide1" checked><br> 
+                <input type="radio" name="r" id="slide2"><br> 
+                <input type="radio" name="r" id="slide3">
+                
+                <div class="slides">
+                    <div class="slide slide-s1" name="a">
+                        <blockquote>
+                            <p>A new email service being develiped by a group<br> 
+                                from MIT and CERN promises to bring secure,<br> 
+                                encrypted email to the masses and keep<br> sensitive 
+                                informaition away from prying eyes.</p>
+                            <cite>— Boston Herald</cite>
+                        </blockquote>
+                    </div>
+                    <div class="slide">
+                        <blockquote>
+                            <p>Rabota ne wolk, v les ne ubezhit.</p>
+                            <cite>— Jason Statham</cite>
+                        </blockquote>
+                    </div>
+                    <div class="slide">
+                        <blockquote>
+                            <p>Welcome to the club buddy.</p>
+                            <cite>— Billy</cite>
+                        </blockquote>
+                    </div>
+                </div>
+
+                <div class="navigation">
+                    <label for="slide1" class="bar"></label>
+                    <label for="slide2" class="bar"></label>
+                    <label for="slide3" class="bar"></label>
+                </div>
             </div>
+        </section>
+        <div class="gradient-wrap">
+            <div class="gradient"></div>
         </div>
+        <section class="computer">
+            <img src="images/computer.png">
+            <div class="any-device">
+                <h3>Any device, anywhere</h3>
+                <p>The NeutronMail inbox is optimized for producivity. Each detail
+                    within our secure email service is optimized to help you better
+                    read, organize, and send email.</p>
+                <div class="black-buttons">
+                    <!-- <a href="https://www.apple.com/ru/app-store/">
+                        <img src="images/app-store-dwnld.png" width="171px" height="53px">
+                    </a> -->
+                    <a href="https://www.apple.com/ru/app-store/"> <img src="images/apple.png" alt=""></a>
+                    <!-- <a href="https://play.google.com/store/games?hl=ru&gl=US">
+                        <img src="images/google-play-dwnld.png">
+                    </a> -->
+                </div>
+            </div>
+        </section>
+        
     </main>
 
 
