Добавил несколько hr hr

--- a/index.html
+++ b/index.html
@@ -145,14 +145,26 @@
                     within our secure email service is optimized to help you better
                     read, organize, and send email.</p>
                 <div class="black-buttons">
-                    <!-- <a href="https://www.apple.com/ru/app-store/">
-                        <img src="images/app-store-dwnld.png" width="171px" height="53px">
-                    </a> -->
-                    <a href="https://www.apple.com/ru/app-store/"> <img src="images/apple.png" alt=""></a>
-                    <!-- <a href="https://play.google.com/store/games?hl=ru&gl=US">
-                        <img src="images/google-play-dwnld.png">
-                    </a> -->
+                    <div id="google-btn"><a href="https://www.apple.com/ru/app-store/">
+                        <img src="images/app-store-dwnld.png" alt="app-store">
+                    </a></div>
+                    <div id="apple-btn"><a href="https://play.google.com/store/games?hl=ru&gl=US">
+                        <img src="images/google-play-dwnld.png" alt="google-play">
+                    </a></div>
                 </div>
+            </div>
+            <hr> 
+            <div class="fundamental">
+                <h3>Privacy is a fundamental human right.</h3>
+                <p>Your support helps us to protect privacy world-wide.</p>
+                <div class="btn-contaner">
+                    <button class="violet-button"><i class="fa-solid fa-cloud-arrow-up"></i> Upgrade to Paid Plan</button>
+                    <button class="blue-button"><i class="fa-solid fa-dollar-sign"></i> Donate</button>
+                </div>
+            </div>
+            <hr>
+            <div class="companies-contaner">
+                <img src="images/helper-label.png" alt="companies" id="companies-img">
             </div>
         </section>
         
