исправлены черные кнопки

--- a/index.html
+++ b/index.html
@@ -145,12 +145,16 @@
                     within our secure email service is optimized to help you better
                     read, organize, and send email.</p>
                 <div class="black-buttons">
-                    <div id="google-btn"><a href="https://www.apple.com/ru/app-store/">
-                        <img src="images/app-store-dwnld.png" alt="app-store">
-                    </a></div>
-                    <div id="apple-btn"><a href="https://play.google.com/store/games?hl=ru&gl=US">
-                        <img src="images/google-play-dwnld.png" alt="google-play">
-                    </a></div>
+                    <div class="app-store-button">
+                        <a href="https://www.apple.com/ru/app-store/">
+                            <img src="images/app-store-dwnld.png" width="171px" height="53px">
+                        </a>
+                    </div>
+                    <div class="google-play-button">
+                       <a href="https://play.google.com/store/games?hl=ru&gl=US">
+                            <img src="images/google-play-dwnld.png" width="171px" height="53px">
+                        </a>
+                    </div>
                 </div>
             </div>
             <hr> 
