everything is ready

--- a/index.html
+++ b/index.html
@@ -93,7 +93,10 @@
                 <h2>Physical Security</h2>
                 <div class="center-text-contaner"><p>NeutronMail's infrastructure resides in Europe's <span class="word-red">most secure</span> 
                      datacenter, underneath 1000 meters of solid rock.</p></div>
-                <div class="button-align"><button class="privacy-button">Learn more about our security features</button></div>
+                <div class="button-align">
+                    <hr>
+                    <button class="privacy-button">Learn more about our security features</button>
+                </div>
             </div>
         </section>
         <section>
@@ -145,30 +148,31 @@
                     within our secure email service is optimized to help you better
                     read, organize, and send email.</p>
                 <div class="black-buttons">
-                    <div class="app-store-button">
+                    <div>
                         <a href="https://www.apple.com/ru/app-store/">
                             <img src="images/app-store-dwnld.png" width="171px" height="53px">
                         </a>
                     </div>
-                    <div class="google-play-button">
+                    <div>
                        <a href="https://play.google.com/store/games?hl=ru&gl=US">
                             <img src="images/google-play-dwnld.png" width="171px" height="53px">
                         </a>
                     </div>
                 </div>
             </div>
-            <hr> 
-            <div class="fundamental">
-                <h3>Privacy is a fundamental human right.</h3>
-                <p>Your support helps us to protect privacy world-wide.</p>
-                <div class="btn-contaner">
-                    <button class="violet-button"><i class="fa-solid fa-cloud-arrow-up"></i> Upgrade to Paid Plan</button>
-                    <button class="blue-button"><i class="fa-solid fa-dollar-sign"></i> Donate</button>
+            <div class="fundamental-wrap">
+                <div class="fundamental">
+                    <h3>Privacy is a fundamental human right.</h3>
+                    <p>Your support helps us to protect privacy world-wide.</p>
+                    <div class="btn-contaner">
+                        <button class="violet-button"><i class="fa-solid fa-cloud-arrow-up"></i> Upgrade to Paid Plan</button>
+                        <button class="blue-button"><i class="fa-solid fa-dollar-sign"></i> Donate</button>
+                    </div>
                 </div>
             </div>
-            <hr>
             <div class="companies-contaner">
-                <img src="images/helper-label.png" alt="companies" id="companies-img">
+                <p>Those, who help us secure your privacy</p>
+                <img src="images/helper-label1.png" alt="companies" width="880px">
             </div>
         </section>
         
