--- a/index.html
+++ b/index.html
@@ -216,10 +216,10 @@
                     <ul>
                         <div class="comp">Legal<br></div>
                         <li> <a href="#">Imprint</a></li>
-                        <li> <a href="#">Privacy Policy</a></li>
+                        <li> <a href="#">Privacy POlicy</a></li>
                         <li> <a href="#">Terms & Conditions</a></li>
                         <li> <a href="#">Transparency Report</a></li>
-                        <li> <a href="#">Report Abuse</a></li>
+                        <li> <a href="#">report Abuse</a></li>
                     </ul>
                 </nav>
                 <nav class="company-info">
